fixed add to list btns on mobile, added gototop btn

--- a/src/components/LogInSignup/LoginSignup.scss
+++ b/src/components/LogInSignup/LoginSignup.scss
@@ -191,8 +191,9 @@
       opacity: 0.75;
     }
     a {
-      opacity: 1;
+      opacity: 0.88;
       color: white;
+      font-weight: bold;
     }
   }
 
